syntax = "proto3";

package chord;

option java_multiple_files = true;
option java_outer_classname = "ChordNodeProto";
option objc_class_prefix = "CN";
option java_package = "net.grpc.chord";

service ChordNodeService{
    rpc Notify(NotifyRequest) returns  (NotifyResponse){}
    rpc FindSuccessor(FindSuccessorRequest) returns (FindSuccessorResponse){}
    rpc TellmePredecessor(TellmePredecessorRequest) returns (TellmePredecessorResponse){}
    rpc Ping(NullRequest) returns (NullResponse){}
}

message NullRequest {
}

message NullResponse {
}

message NotifyRequest {
    Identifier identifier = 1;
}

message NotifyResponse {
    string address = 1;
    int32 ID = 2;
}

message FindSuccessorRequest {
    int32 ID = 1;
}

message FindSuccessorResponse {
    Identifier identifier = 1;
}

message TellmePredecessorRequest {
    int32 ID = 1;
}

message TellmePredecessorResponse {
    Identifier identifier = 1;
}

message Identifier {
    string IP = 1;
    int32 port = 2;
    int32 ID = 3;
    Identifier predecessor=4;
    Identifier successor=5;
}